Bug 165894 - Kgpg test of mail-adress fails
Summary: Kgpg test of mail-adress fails
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-06 22:42 UTC by Jörg C. Frings-Fürst
Modified: 2008-07-18 00:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
Input (38.98 KB, image/png)
2008-07-06 22:43 UTC, Jörg C. Frings-Fürst
Details
Error-Message (47.05 KB, image/png)
2008-07-06 22:43 UTC, Jörg C. Frings-Fürst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jörg C. Frings-Fürst 2008-07-06 22:42:15 UTC
Version:           1.7.3 (using 4.0.4 (KDE 4.0.4 >= 20080505) "release 15.1", compiled sources)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.25.5-1.1-default

by generate a new keypair for listen0001@jff-software.de I got the error "Email-Adresse ungültig"
Comment 1 Jörg C. Frings-Fürst 2008-07-06 22:43:18 UTC
Created attachment 25888 [details]
Input
Comment 2 Jörg C. Frings-Fürst 2008-07-06 22:43:59 UTC
Created attachment 25889 [details]
Error-Message
Comment 3 Rolf Eike Beer 2008-07-07 09:40:34 UTC
SVN commit 828999 by dakon:

Allow hyphen in domain names

CCMAIL:jimmygilles@gmail.com
BUG:165894


 M  +2 -2      emailvalidator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=828999
Comment 4 Daniel Nicoletti 2008-07-17 00:06:50 UTC
Allow hyphen in email address like

dantti85-something@yahoo.com
Comment 5 Tom Albers 2008-07-17 00:13:08 UTC
reopen
Comment 6 Rolf Eike Beer 2008-07-17 10:23:13 UTC
SVN commit 833627 by dakon:

Hyphens in localparts are valid as are '+' and '%'

BUG:165894


 M  +4 -2      emailvalidator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=833627
Comment 7 Rolf Eike Beer 2008-07-18 00:21:42 UTC
SVN commit 834060 by dakon:

don't fail on valid characters '-', '+' and '%' in localpart

CCBUG:165894


 M  +4 -2      emailvalidator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=834060
Comment 8 Rolf Eike Beer 2008-07-18 00:23:05 UTC
SVN commit 834061 by dakon:

don't fail on valid characters '-', '+' and '%' in localpart

CCBUG:165894

backport of r833627


 M  +4 -2      emailvalidator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=834061