Hyphens in localparts are valid as are '+' and '%'

BUG:165894

svn path=/trunk/KDE/kdeutils/kgpg/; revision=833627