core/emailvalidator.cpp
@@ -27,11 +27,13 @@ namespace KgpgCore
 
 QValidator::State EmailValidator::validate(QString &input, int &) const
 {
-    static QString pattern = "^[a-z][a-z|0-9|]*([_][a-z|0-9]+)*([.][a-z|"
-                             "0-9]+([_][a-z|0-9]+)*)?@[a-z][a-z|0-9|-]*\\.([a-z]"
+    static QString pattern = "^[a-z][a-z|0-9|\\-|_|\\.|%|\\+]*@[a-z][a-z|0-9|-]*\\.([a-z]"
                              "[a-z|0-9|-]*(\\.[a-z][a-z|0-9|-]*)?)$";
 
     static QRegExp regexp(pattern, Qt::CaseInsensitive);
+
+    if (input.contains(QString("..")))
+        return QValidator::Invalid;
 
     if (regexp.exactMatch(input))
         return QValidator::Acceptable;
